fix: panel z-index

--- a/transcendence/pong/static/pong/styles.css
+++ b/transcendence/pong/static/pong/styles.css
@@ -238,6 +238,7 @@ body {
 .login-panel {
     display: none;
     position: fixed;
+    z-index: 999;
     top: 0;
     right: 0;
     width: 320px;
